--- a/templates/about us.html
+++ b/templates/about us.html
@@ -19,7 +19,7 @@
     </center>
     <p>
     <center>
-    <h1>I K.Edwards a survive of abuse, the founder/creater of this Amass app. I do not want any woman to feel like I did, alone and ashamed of being judged by other and shut down and didn't asked for help. We are mentors, caring and nonjudgmental, who will be your support through this and will help you to find the resources need, such as shelter ,food and ect. so you may make a life changing decision towards a brighter future. </h1></center>
+    <h1>I am a survive of abuse, the founder/creater of this Amass app. I do not want any woman to feel like I did, alone and ashamed of being judged by other and shut down and didn't asked for help. We are mentors, caring and nonjudgmental, who will be your support through this and will help you to find the resources need, such as shelter ,food and ect. so you may make a life changing decision towards a brighter future. </h1></center>
     <center>
     <img src="{{ url_for('static', filename='R (1).jpg')}}"alt=""with="400" height="300">
     </center>
